WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282252
REGRESSION(
282990@main
) LegacyEME fails when appending media segment before completing key exchange
https://bugs.webkit.org/show_bug.cgi?id=282252
Summary
REGRESSION(282990@main) LegacyEME fails when appending media segment before c...
Jer Noble
Reported
2024-10-29 10:21:27 PDT
REGRESSION(
282990@main
) LegacyEME fails when appending media segment before completing key exchange
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-10-29 10:21:28 PDT
<
rdar://problem/138002160
>
Jer Noble
Comment 2
2024-10-29 10:25:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35871
EWS
Comment 3
2024-11-03 21:36:29 PST
Committed
286068@main
(710c98ac50e2): <
https://commits.webkit.org/286068@main
> Reviewed commits have been landed. Closing PR #35871 and removing active labels.
EWS
Comment 4
2024-11-06 10:05:44 PST
Committed
283286.439@safari-7620-branch
(50266e7fcb9a): <
https://commits.webkit.org/283286.439@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2198 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug