Cherry-pick 710c98ac50e2. rdar://139287698

REGRESSION(282990@main) LegacyEME fails when appending media segment before completing key exchange
    https://bugs.webkit.org/show_bug.cgi?id=282252
    rdar://138002160

    Reviewed by Andy Estes.

    When enabling the "modern AVContentKey support" path, we updated the modern EME implementation
    but neglected to update the LegacyEME implementation with similar changes. To support the new
    AVContentKeySession path, we must _not_ add the AVStreamDataParser to the AVContentKeySession.
    Additionally, when keys are added through the LegacyEME path, we must explicitly signal the
    SourceBufferPrivate to attempt to enqueue the protected samples for decode and display.

    * LayoutTests/http/tests/media/fairplay/legacy-fairplay-mse-muxed-nowait-expected.txt: Added.
    * LayoutTests/http/tests/media/fairplay/legacy-fairplay-mse-muxed-nowait.html: Added.
    * Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.mm:
    (WebCore::CDMSessionMediaSourceAVFObjC::addSourceBuffer):
    (WebCore::CDMSessionMediaSourceAVFObjC::removeSourceBuffer):
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::keyAdded):
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.mm:
    (WebCore::MediaSourcePrivateAVFObjC::keyAdded):
    * Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
    (WebCore::SourceBufferPrivateAVFObjC::setCDMSession):
    (WebCore::SourceBufferPrivateAVFObjC::attemptToDecrypt):

    Canonical link: https://commits.webkit.org/286068@main

Canonical link: https://commits.webkit.org/283286.439@safari-7620-branch