Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionAVContentKeySession.h
@@ -42,6 +42,15 @@ class WorkQueue;
 }
 
 namespace WebCore {
+class CDMSessionAVContentKeySession;
+}
+
+namespace WTF {
+template<typename T> struct IsDeprecatedWeakRefSmartPointerException;
+template<> struct IsDeprecatedWeakRefSmartPointerException<WebCore::CDMSessionAVContentKeySession> : std::true_type { };
+}
+
+namespace WebCore {
 
 class CDMPrivateMediaSourceAVFObjC;
 
@@ -68,14 +77,14 @@ public:
 
     void didProvideContentKeyRequest(AVContentKeyRequest *);
 
-protected:
-    RefPtr<Uint8Array> generateKeyReleaseMessage(unsigned short& errorCode, uint32_t& systemCode);
-
     bool hasContentKeySession() const { return m_contentKeySession; }
     AVContentKeySession* contentKeySession();
 
     bool hasContentKeyRequest() const;
     RetainPtr<AVContentKeyRequest> contentKeyRequest() const;
+
+protected:
+    RefPtr<Uint8Array> generateKeyReleaseMessage(unsigned short& errorCode, uint32_t& systemCode);
 
 #if !RELEASE_LOG_DISABLED
     ASCIILiteral logClassName() const { return "CDMSessionAVContentKeySession"_s; }
